<resources>
    <string name="app_name">Trade Center</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="overlay_button">Overlay Button</string>
    <string name="card_reader">Card Reader</string>
    <string name="hide_system_bars">Hide System Bars</string>
    <string name="overlay_explanation">Overlay button may require user permission on new devices.</string>
    <string name="card_reader_explanation">Card Reader device must be connected before enabling.</string>
    <string name="system_bar_explanation">Hiding system bars requires root abilities. Device will reboot upon saving.</string>
    <string name="unexptected_behaviour">Overlay is not permitted</string>
    <string name="title_activity_device_detached">DeviceDetachedActivity</string>
    <string name="done">Done</string>
    <string name="restart">Restart</string>
    <string name="restart_needed">In order to change this settings, restart is needed.</string>
    <string name="restart_later">Restart Later</string>
    <string name="root_required">Root is required</string>
    <string name="manual_reboot_required">Could not reboot, manual reboot is required</string>
    <string name="ok">OK</string>
    <string name="connect_cardreader">Card reader is disconnected. Please connect it first and then press OK</string>
    <string name="trade">Trade</string>
    <string name="news">News</string>
    <string name="bonus">Bonus</string>
    <string name="ranglist">Ranglist</string>
    <string name="faq">Frequently Asked Questions</string>
    <string name="app_label">Trade Center 1.0</string>

</resources>
